<resources>
    <string name="app_name">Sprint-4</string>
    <string name="save_user_button">Guardar usuario</string>
    <string name="name">Nombre: </string>
    <string name="favorite_color">"Color favorito: "</string>
    <string name="birthdate">"Fecha de nacimiento: "</string>
    <string name="favorite_city">"Ciudad favorita: "</string>
    <string name="favorite_number">"Número favorito: "</string>
    <string name="actual_location">"Localización actual: "</string>
    <string name="user_name_example">John</string>
    <string name="user_fav_color_example">Azul</string>
    <string name="user_birthdate_example">DD/MM/YYYY</string>
    <string name="user_fav_city_name_example">Nueva York</string>
    <string name="user_favorite_number_example">84</string>
    <string name="open_map">Abrir mapa</string>
    <string name="user_actual_position_example">40.730610, -73.935242</string>
    <string name="back_button_description">Back button</string>
    <string name="choose_location">Selecciona localización</string>
    <string name="description_add_user_button">Boton de añadir usuarios</string>
    <string name="users_not_found">No hay usuarios</string>
    <string name="change_location">Cambiar localización</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>