<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_button_description"
        android:padding="15dp"
        android:src="@drawable/ic_back"
        android:background="@color/backgroundColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ibBack"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/user_name_example"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvFavColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/favorite_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvUserName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvUserFavColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/user_fav_color_example"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvFavColor"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/birthdate"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvUserFavColor"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvUserBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/user_birthdate_example"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvBirthdate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvFavCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/favorite_city"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvUserBirthdate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvUserFavCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        android:hint="@string/user_fav_city_name_example"
        app:layout_constraintTop_toBottomOf="@id/tvFavCity"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvUserFavCityCoordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        android:hint="@string/user_actual_position_example"
        app:layout_constraintTop_toBottomOf="@id/tvFavCity"
        app:layout_constraintStart_toEndOf="@id/tvUserFavCityName" />

    <TextView
        android:id="@+id/tvFavNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/favorite_number"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvUserFavCityName"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvUserFavNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        android:hint="@string/user_favorite_number_example"
        app:layout_constraintTop_toBottomOf="@id/tvFavNumber"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvActualLocationPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/actual_location"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvUserFavNumber"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvActualLocationValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvActualLocationPrompt"
        android:hint="@string/user_actual_position_example" />

    <Button
        android:id="@+id/btOpenMap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/open_map"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>