<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_button_description"
        android:padding="15dp"
        android:src="@drawable/ic_back"
        android:background="@color/backgroundColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ibBack"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/user_name_example"
        android:hint="@string/user_name_example"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvName" />

    <TextView
        android:id="@+id/tvFavColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/favorite_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etFavColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/user_fav_color_example"
        android:hint="@string/user_fav_color_example"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvFavColor" />

    <TextView
        android:id="@+id/tvBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/birthdate"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/etFavColor"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etBirthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/user_birthdate_example"
        android:hint="@string/user_birthdate_example"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvBirthdate" />

    <TextView
        android:id="@+id/tvFavCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/favorite_city"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/etBirthdate"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerFavCity"
        android:spinnerMode="dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFavCity" />

    <TextView
        android:id="@+id/tvFavNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/favorite_number"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerFavCity" />

    <EditText
        android:id="@+id/etFavNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/user_favorite_number_example"
        android:hint="@string/user_favorite_number_example"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvFavNumber" />

    <TextView
        android:id="@+id/tvActualLocationPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/actual_location"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/etFavNumber"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvActualLocationValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tvActualLocationPrompt"
        android:hint="@string/user_actual_position_example" />

    <Button
        android:id="@+id/btSaveUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/save_user_button"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>